fix: ignore horizontal overflow
When the sidebar is hidden, the scrollbar won't appear at the bottom

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,6 +75,7 @@
 @layer base {
 	body {
 		font-family: Inter;
+		overflow-x: hidden;
 	}
 }
 
